--- a/설명서.md
+++ b/설명서.md
@@ -14,7 +14,7 @@
 - 우리는 Leaves의 모든 기능을 포함하기로 했습니다. Leaves는 중국에서 만들어진 Paper 상위 호환입니다.
 - Leaves를 넣어 우리는 CITES에 대해 보이콧을 하기로 하였습니다. 
 ## 이제 어떻게 되는가
-```java -XmsXG, -XmxYG [aikar/velocity] -jar Radioactive-LeavesClip-1.20.6-R0.1-SNAPSHOT-reobf.jar``` 명령어를 실행할 시, 서버는 동작하지만,
+```java -XmsXG -XmxYG [aikar/velocity] -jar Radioactive-LeavesClip-1.20.6-R0.1-SNAPSHOT-reobf.jar``` 명령어를 실행할 시, 서버는 동작하지만,
 로그가 다음과 같이 출력됩니다.
 ```
 Starting org.bukkit.craftbukkit.Main
