--- a/설명서.md
+++ b/설명서.md
@@ -14,8 +14,8 @@
 - 우리는 Leaves의 모든 기능을 포함하기로 했습니다. Leaves는 중국에서 만들어진 Paper 상위 호환입니다.
 - Leaves를 넣어 우리는 CITES에 대해 보이콧을 하기로 하였습니다. 
 ## 이제 어떻게 되는가
-```java -XmsXG -XmxYG [aikar/velocity] -jar Radioactive-LeavesClip-1.20.6-R0.1-SNAPSHOT-reobf.jar``` 명령어를 실행할 시, 서버는 동작하지만,
-로그가 다음과 같이 출력됩니다.
+```java -XmsXG -XmxYG [aikar/velocity] -jar Radioactive-LeavesClip-1.20.6-R0.1-SNAPSHOT-reobf.jar``` 명령어를 실행할 시, 서버는 동작하지만, 푸조대 카페 링크를 띄운뒤 5초 이후에 동작하며,
+이후 로그가 다음과 같이 출력됩니다.
 ```
 Starting org.bukkit.craftbukkit.Main
 System Info: Java 21 (Java HotSpot(TM) 64-Bit Server VM 21.0.2+13-LTS-58) Host: Windows 10 10.0 (amd64)
@@ -40,9 +40,9 @@ Loading libraries, please wait...
 [21:07:02 ERROR]: #supportfubao #savefubao #citessux #CITESSucks #bringfubaobacktokorea #koreachinafriendsforeverwithfubao  #PlazmaXLeaves #FuBao #푸바오 #福宝 #플라즈마X리브스 #푸바오와함께
 [21:17:02 ERROR]:
 [21:17:02 ERROR]: *******************************************************
-[21:17:02 WARN]: Warning! Plazma may cause unexpected problems, so be sure to test it thoroughly before using it on a public server.
+[21:17:02 WARN]: Warning! Radioactive may cause unexpected problems, so be sure to test it thoroughly before using it on a public server.
 [21:17:02 ERROR]: *********************** CAUTION ***********************
-[21:17:02 ERROR]: This version is a development version of Plazma.
+[21:17:02 ERROR]: This version is a development version of Radioactive.
 [21:17:02 ERROR]: Nobody knows what kind of problem you're going to have, and there's always the possibility of unexpected problems.
 [21:17:02 ERROR]: Never use this version on a public server, and after you've tested it enough before using it!
 [21:17:02 ERROR]: *******************************************************
@@ -251,8 +251,6 @@ java.lang.NoSuchMethodException: net.minecraft.world.level.block.entity.TileEnti
 gradlew applypatches: Plazma 서버에 패치를 적용하여 RadioActive 서버 코드를 생성함
 gradlew createReobfBundlerJar: 안정버전 서버 Jar를 빌드(비-Paperclip이라 서버 파일 패치는 없음): 생성 파일: Radioactive-Bundler-1.20.6-R0.1-SNAPSHOT-reobf.jar
 gradlew createMojmapBundlerJar: 개발버전 서버 Jar를 빌드(비-Paperclip이라 서버 파일 패치는 없음): 생성 파일: Radioactive-Bundler-1.20.6-R0.1-SNAPSHOT-Mojmap.jar
-gradlew createReobfPaperclipJar: 안정버전 서버 Jar를 빌드(Paperclip 1단계): 생성 파일: Radioactive-Paperclip-1.20.6-R0.1-SNAPSHOT-reobf.jar
-gradlew createMojmapPaperclipJar: 개발버전 서버 Jar를 빌드(Paperclip 1단계): 생성 파일: Radioactive-Paperclip-1.20.6-R0.1-SNAPSHOT-Mojmap.jar
-gradlew createReobfLeavesclipJar: 안정버전 서버 Jar를 빌드(기본형): 생성 파일: Radioactive-Leavesclip-1.20.6-R0.1-SNAPSHOT-reobf.jar
-gradlew createMojmapLeavesclipJar: 개발버전 서버 Jar를 빌드(기본형): 생성 파일: Radioactive-Leavesclip-1.20.6-R0.1-SNAPSHOT-Mojmap.jar
+gradlew createReobfPaperclipJar: 안정버전 서버 Jar를 빌드: 생성 파일: Radioactive-Paperclip-1.20.6-R0.1-SNAPSHOT-reobf.jar
+gradlew createMojmapPaperclipJar: 개발버전 서버 Jar를 빌드: 생성 파일: Radioactive-Paperclip-1.20.6-R0.1-SNAPSHOT-Mojmap.jar
 ```
